--- a/UserInterface.uproject
+++ b/UserInterface.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "UserInterface",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"ModelViewViewModel"
+			]
 		}
 	],
 	"Plugins": [
