--- a/UserInterface.uproject
+++ b/UserInterface.uproject
@@ -9,7 +9,9 @@
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
-				"ModelViewViewModel"
+				"ModelViewViewModel",
+				"UMG",
+				"Engine"
 			]
 		}
 	],
