--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
 EditorStartupMap=/Game/UMG.UMG
+GlobalDefaultGameMode=/Game/GameMode/BP_GameMode.BP_GameMode_C
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
