Implement friend service provider subsystem

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=83B597BB4BE1F1756B79309BCA0A01DC
 
+[/Script/UserInterface.FriendServiceProviderSubsystem]
+FriendServiceClass=/Script/UserInterface.FriendSubsystem
+
 [/Script/UserInterface.FriendSubsystem]
 DataTablePath="/Game/Data/DT_Friends"
