--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,19 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
 EditorStartupMap=/Game/UMG.UMG
-GlobalDefaultGameMode=/Game/GameMode/BP_GameMode.BP_GameMode_C
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/UMG.UMG
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/GameMode/GMBP_Default.GMBP_Default_C
+GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
