--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,3 +6,7 @@ FriendServiceClass=/Script/UserInterface.FriendSubsystem
 
 [/Script/UserInterface.FriendSubsystem]
 DataTablePath="/Game/Data/DT_Friends"
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildTarget=UserInterface
+
