Load friends async

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,8 +5,4 @@ ProjectID=83B597BB4BE1F1756B79309BCA0A01DC
 FriendServiceClass=/Script/UserInterface.FriendSubsystem
 
 [/Script/UserInterface.FriendSubsystem]
-DataTablePath="/Game/Data/DT_Friends"
-
-[/Script/UnrealEd.ProjectPackagingSettings]
-BuildTarget=UserInterface
-
+FriendsDataTablePath="/Game/Data/DT_Friends.DT_Friends"
