--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/UMG.UMG
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/GameMode/GMBP_Default.GMBP_Default_C
+GlobalDefaultGameMode=/Game/GameMode/GMBP_Friend.GMBP_Friend_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
