--- a/UserInterface.uproject
+++ b/UserInterface.uproject
@@ -11,7 +11,8 @@
 			"AdditionalDependencies": [
 				"ModelViewViewModel",
 				"UMG",
-				"Engine"
+				"Engine",
+				"CommonUI"
 			]
 		},
 		{
