--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -103,3 +103,15 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/UserInterface.FriendListViewEntryWidget",NewName="/Script/UserInterface.FriendsWidgetEntry")
++ClassRedirects=(OldName="/Script/UserInterface.FriendViewModelSubsystem",NewName="/Script/UserInterface.FriendsViewModelSubsystem")
++ClassRedirects=(OldName="/Script/UserInterface.FriendNotificationWidgetViewModel",NewName="/Script/UserInterface.FriendsNotificationsWidgetViewModel")
++ClassRedirects=(OldName="/Script/UserInterface.FriendListWidgetViewModel",NewName="/Script/UserInterface.FriendsWidgetViewModel")
++ClassRedirects=(OldName="/Script/UserInterface.FriendListWidgetBase",NewName="/Script/UserInterface.FriendListViewWidget")
++ClassRedirects=(OldName="/Script/UserInterface.FriendListWidget",NewName="/Script/UserInterface.FriendsWidget")
++ClassRedirects=(OldName="/Script/UserInterface.FriendListViewModelDataAsset",NewName="/Script/UserInterface.FriendsWidgetViewModelDataAsset")
++ClassRedirects=(OldName="/Script/UserInterface.FriendListViewModelBase",NewName="/Script/UserInterface.FriendsViewModel")
++ClassRedirects=(OldName="/Script/UserInterface.ConnectedFriendListWidget",NewName="/Script/UserInterface.FriendsNotificationsWidget")
++ClassRedirects=(OldName="/Script/UserInterface.ConnectedFriendListViewEntryWidget",NewName="/Script/UserInterface.FriendsNotificationsWidgetEntry")
