--- a/.editorconfig
+++ b/.editorconfig
@@ -37,33 +37,55 @@ dotnet_style_qualification_for_property = false:suggestion
 dotnet_style_require_accessibility_modifiers = for_non_interface_members:suggestion
 
 # ReSharper properties
+resharper_align_multiline_binary_expressions_chain = true
 resharper_align_multiline_expression_braces = true
 resharper_autodetect_indent_settings = true
 resharper_blank_lines_around_function_declaration = 1
 resharper_cpp_align_multiline_argument = false
+resharper_blank_lines_around_single_line_function_definition = 1
+resharper_cpp_empty_block_style = together_same_line
+resharper_cpp_insert_final_newline = true
 resharper_cpp_int_align_comments = true
 resharper_cpp_keep_blank_lines_in_code = 1
 resharper_cpp_keep_blank_lines_in_declarations = 1
 resharper_cpp_keep_user_linebreaks = false
+resharper_cpp_max_enum_members_on_line = 1
 resharper_cpp_wrap_arguments_style = chop_if_long
 resharper_cpp_wrap_before_ternary_opsigns = false
 resharper_cpp_wrap_parameters_style = chop_if_long
 resharper_formatter_off_tag = @formatter:off
 resharper_formatter_on_tag = @formatter:on
 resharper_formatter_tags_enabled = true
+resharper_function_declaration_return_type_style = on_single_line
+resharper_function_definition_return_type_style = on_single_line
 resharper_indent_class_members_from_access_specifiers = true
 resharper_indent_switch_labels = true
 resharper_int_align_bitfield_sizes = true
 resharper_int_align_declaration_names = true
 resharper_int_align_enum_initializers = true
 resharper_int_align_eq = true
+resharper_keep_existing_enum_arrangement = false
+resharper_line_break_after_colon_in_member_initializer_lists = on_single_line
+resharper_line_break_after_deref_in_trailing_return_types = on_single_line
+resharper_line_break_after_init_statement = on_single_line
 resharper_line_break_before_comma_in_member_initializer_lists = true
+resharper_line_break_before_deref_in_trailing_return_types = on_single_line
+resharper_line_break_before_function_try_block = line_break
+resharper_line_break_before_requires_clause = on_single_line
 resharper_linkage_specification_indentation = all
+resharper_member_initializer_list_style = line_break
+resharper_simple_block_style = line_break
+resharper_simple_case_statement_style = line_break
+resharper_simple_embedded_statement_style = line_break
 resharper_space_before_initializer_braces = true
 resharper_space_within_initializer_braces = true
+resharper_toplevel_function_declaration_return_type_style = on_single_line
+resharper_toplevel_function_definition_return_type_style = on_single_line
 resharper_use_indent_from_vs = false
+resharper_wrap_base_clause_style = chop_if_long
 resharper_wrap_braced_init_list_style = chop_if_long
 resharper_wrap_ctor_initializer_style = chop_always
+resharper_wrap_enumeration_style = chop_always
 
 # ReSharper inspection severities
 resharper_arrange_redundant_parentheses_highlighting = hint
