WIP use global collection

--- a/UserInterface.uproject
+++ b/UserInterface.uproject
@@ -23,7 +23,8 @@
 				"ModelViewViewModel",
 				"UMG",
 				"Engine",
-				"FunctionalTestingEditor"
+				"FunctionalTestingEditor",
+        "UserInterface"
 			]
 		}
 	],
